[package]
name = "meivm2"
version = "0.1.0"
edition = "2021"

[features]
default = ["net"]
net = ["futures-util", "serde_json", "tokio", "tokio-tungstenite"]
cli = []

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }
futures-util = { version = "^0.3.21", optional = true }
tokio = { version = "1.19.2", features = ["full"], optional = true }
rand = { version = "0.8.5" }
tokio-tungstenite = { version = "0.21.0", optional = true }
base64 = "0.22.1"

[lib]
path = "src/vm.rs"
test = true

[[bin]]
name = "wave2"
path = "src/wave.rs"
test = true

[[bin]]
name = "wave2-net"
path = "src/wavenet.rs"
test = true
required-features = ["net"]

